aws-infra-with-terraform/ec2.tf
# key pair

resource aws_key_pair "my_key" {

	key_name = "aws_kp"
	public_key = file("aws_kp.pub")

	}

# VPC

resource aws_default_vpc "my_vpc"{

	}

# security groups

resource aws_security_group "my_security_group" {

	 name        = "ec2_tf_sg"
 	 description = "Allow TLS inbound traffic and all outbound traffic"
  	 vpc_id      = aws_default_vpc.my_vpc.id

  	 tags = {
    		Name = "ec2_tf_sg"
		}
	}
resource "aws_vpc_security_group_ingress_rule" "allow_tls_ipv4_https" {
	  security_group_id = aws_security_group.my_security_group.id
	  cidr_ipv4         = "0.0.0.0/0"
	  from_port         = 443
	  ip_protocol       = "tcp"
	  to_port           = 443
	  description	    = "https port"
	}	
resource "aws_vpc_security_group_ingress_rule" "allow_tls_ipv4_http" {
          security_group_id = aws_security_group.my_security_group.id
          cidr_ipv4         = "0.0.0.0/0"
          from_port         = 80
          ip_protocol       = "tcp"
          to_port           = 80
          description       = "HTTP port"
        }

resource "aws_vpc_security_group_ingress_rule" "allow_tls_ipv4_ssh" {
          security_group_id = aws_security_group.my_security_group.id
          cidr_ipv4         = "0.0.0.0/0"
          from_port         = 22
          ip_protocol       = "tcp"
          to_port           = 22
	  description	    = "SSH port"
        }

resource "aws_vpc_security_group_egress_rule" "allow_all_traffic_ipv4" {
		security_group_id = aws_security_group.my_security_group.id
		from_port = 0
		to_port = 0
		ip_protocol = "-1"
		cidr_ipv4 = "0.0.0.0/0"
		description = "All access"
	}


# ec2 instance

resource aws_instance "my_instance" {

	ami = "ami-0cfde0ea8edd312d4" #ubuntu
	instance_type = "t3.micro"
	key_name = aws_key_pair.my_key.key_name
	security_groups = [aws_security_group.my_security_group.name]
	
	root_block_device {
		volume_size = 15
		volume_type = "gp3"
		}
	tags = {
		Name = "tf-auto-instance"
	}
}
